--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,4 +1,17 @@
 .container {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+
+.err {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.iframeWrap {
+  width: 100%;
+  height: 100%;
 }
